--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,9 @@ spring.datasource.hikari.max-lifetime=600000
 spring.datasource.hikari.connection-timeout=30000
 
 spring.main.allow-bean-definition-overriding=true
+
+
+spring.servlet.multipart.max-file-size=10GB
+spring.servlet.multipart.max-request-size=10GB
+
+spring.mvc.throw-exception-if-no-handler-found=true
