--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+//	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.jetbrains:annotations:23.0.0'
@@ -38,6 +38,24 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 //	implementation 'org.hibernate:hibernate-validator:7.0.5.Final'
 	implementation 'commons-io:commons-io:2.11.0'
+
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+	implementation 'org.springframework.security:spring-security-jwt:1.1.1.RELEASE'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	implementation 'org.springframework.boot:spring-boot-starter-aop:2.7.12'
+	compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
+
+//	implementation 'io.springfox:springfox-swagger2:2.9.2'
+//	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+
+//	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
+	implementation 'org.springdoc:springdoc-openapi-ui:1.5.12'
+
+
+
+
 }
 
 tasks.named('test') {
