--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 
 #mysql config
-spring.datasource.url=jdbc:mysql://localhost:3306/file_manager_db?useSSL=false&createDatabaseIfNotExist=true
+
+spring.database.name = file_manager_db
+spring.datasource.url=jdbc:mysql://localhost:3306/${spring.database.name}?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
@@ -9,6 +11,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 
 spring.main.banner-mode=off
@@ -28,3 +31,14 @@ spring.servlet.multipart.max-file-size=10GB
 spring.servlet.multipart.max-request-size=10GB
 
 spring.mvc.throw-exception-if-no-handler-found=true
+
+
+jwt.public.key = classpath:pubkey.pem
+jwt.private.key = classpath:privkey.pem
+
+
+logging.level.web=debug
+logging.level.org.springframework=debug
+spring.security.headers.content-security-policy=script-src 'self' 'unsafe-inline';
+
+
